--- a/frontend/home.html
+++ b/frontend/home.html
@@ -13,7 +13,7 @@
     <header id="navbar-container" class="container mx-auto px-4 sm:px-6 lg:px-8 pt-4"></header>
 
     <main class="container mx-auto p-4 sm:px-6 lg:px-8">
-        <div class="bg-white p-6 rounded-lg shadow-md">
+        <div class="bg-white/95 backdrop-blur-sm p-6 rounded-lg shadow-md">
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-700">Bem-vindo ao Sistema de Gerenciamento da Biblioteca</h1>
             <p class="text-gray-600 mt-2">Utilize o menu de navegação acima para gerenciar os usuários, livros e empréstimos.</p>
         </div>
