--- a/frontend/home.html
+++ b/frontend/home.html
@@ -14,8 +14,7 @@
 
     <main class="container mx-auto p-4 sm:px-6 lg:px-8">
         <div class="bg-white/95 backdrop-blur-sm p-6 rounded-lg shadow-md">
-            <h1 class="text-3xl sm:text-4xl font-bold text-gray-700">Bem-vindo ao Sistema de Gerenciamento da Biblioteca</h1>
-            <p class="text-gray-600 mt-2">Utilize o menu de navegação acima para gerenciar os usuários, livros e empréstimos.</p>
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-700">Bem-vindo ao Sistema de Gerenciamento da Biblioteca (SGB)</h1>
         </div>
     </main>
 
