--- a/frontend/home.html
+++ b/frontend/home.html
@@ -14,7 +14,8 @@
 
     <main class="container mx-auto p-4 sm:px-6 lg:px-8">
         <div class="bg-white/95 backdrop-blur-sm p-6 rounded-lg shadow-md">
-            <h1 class="text-3xl sm:text-4xl font-bold text-gray-700">Bem-vindo ao Sistema de Gerenciamento da Biblioteca (SGB)</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-700">Bem-vindo ao Sistema de Gerenciamento de Bibliotecas (SGB)</h1>
+            <p class="text-gray-600 mt-2">Desenvolvido Por <a href="https://www.linkedin.com/in/pedrohjunqueira/" target="_blank" style="color: #B7872D">Pedro Junqueira</a> - by Version 1.0</p>
         </div>
     </main>
 
